tests/type-errors/create_contract_arl_with_param_anonymous_field.arl
archetype create_contract_arl_with_param_anonymous_field

import "../passed/simple_param.arl"

entry exec () {
  const delegate : option<key_hash> = none;
  const amount : tez = 0tz;
  const op_addr : (operation * address) = create_contract(simple_param, delegate, amount, {0});
  operations := [op_addr[0]]
}
